# cb_editor_navigation

./: Makefile.am  README.md  configure.ac  editor_navigation.cbp
resources/: build.sh  create_atlas.py  editor_navigation_toolbar.xrc  editor_navigation_toolbar_16x16.xrc  editor_navigation_toolbar_22x22.xrc  manifest.xml
src/: common.h  editor_navigation.cpp  editor_navigation.h  list_dialog.cpp  list_dialog.h
